--- a/views/addEvent.handlebars
+++ b/views/addEvent.handlebars
@@ -1,21 +1,41 @@
 <h1 class="mt-5">Add event</h1>
 <h5 class="mt-5">Add your event</h3>
-<form action="/action_page.php">
+<form action="/addEvent" method="post">
 	ID: <input type="text" name="id"><br>
 	Name: <input type="text" name="name"><br>
 	Description: <input type="text" height="20px" name="desc"><br>
 	People ID: <input type="text" name="pid"><br>
 	Region ID: <input type="text" name="rid"><br>
 	Time periodID: <input type="text" name="time"><br>
+	<input type="submit" value="submit"/>
 </form>
-<button type="button">Insert</button>
 
 <br><br><br><br><br>
 <h3>List of Events</h3>
-	<pre style="font-size: 13pt;"> ID	Name	Description	PeopleID	RegionID		Time Period</pre>  
-	<pre style="font-size: 10pt;">      1		The third war	....			   2			1     		   	 	1<button type="button"> Delete</button> <button type="button">Update</button>  </pre>
-	<pre style="font-size: 10pt;">      2		Taracotta Army  ....   			   3			2				3 <button type="button"> Delete</button> <button type="button"> Update</button>  </pre>
-	<pre style="font-size: 10pt;">      3		Exile of Moham. ....			   1			3				2 <button type="button"> Delete</button> <button type="button"> Update</button>  </pre>
 
+<table>
+	<thead>
+		<tr>
+			<th>Id</th>
+			<th>Event Name</th>
+			<th>Description</th>
+			<th>reid</th>
+			<th>tpid</th>
+			<th>update/remove</th>
+		</tr>
+	</thead>
+	<tbody>
+		{{#each event}}
+			<tr>
+				<td>{{id}}</td>
+				<td>{{event_name}}</td>
+				<td>{{description}}</td>
+				<td>{{reid}}</td>
+				<td>{{tpid}}</td>
+				<td><button type="button" id="removeId1">Remove</button>
+				<button type="button" id="updateId2">Update</button></td>
+			</tr>
+		{{/each}}
+	</tbody>
 
-
+</table>
