inserts now work

--- a/views/addEvent.handlebars
+++ b/views/addEvent.handlebars
@@ -1,12 +1,10 @@
 <h1 class="mt-5">Add event</h1>
 <h5 class="mt-5">Add your event</h3>
 <form action="/addEvent" method="post">
-	ID: <input type="text" name="id"><br>
-	Name: <input type="text" name="name"><br>
+	Name: <input type="text" name="ename"><br>
 	Description: <input type="text" height="20px" name="desc"><br>
-	People ID: <input type="text" name="pid"><br>
-	Region ID: <input type="text" name="rid"><br>
-	Time periodID: <input type="text" name="time"><br>
+	Region ID: <input type="text" name="reid"><br>
+	Time periodID: <input type="text" name="tpid"><br>
 	<input type="submit" value="submit"/>
 </form>
 
