--- a/views/addCity.handlebars
+++ b/views/addCity.handlebars
@@ -3,11 +3,9 @@
 
 
 <form action="/addCity" method="post">
-	ID: <input type="text" name="id"><br>
-	Name: <input type="text" name="name"><br>
-	People ID: <input type="text" name="pid"><br>
+	Name: <input type="text" name="cname"><br>
+	Population: <input type="text" name="pop"><br>
 	Region ID: <input type="text" name="rid"><br>
-	Time periodID: <input type="text" name="time"><br>
 	<input type="submit" value="submit"/>
 </form>
 <br><br><br><br><br>
