--- a/views/addPerson.handlebars
+++ b/views/addPerson.handlebars
@@ -2,12 +2,11 @@
 <h5 class="mt-5">Add your person</h3>
 		
 <form action="/addPerson" method="post">
-	ID: <input type="text" name="id"><br>
-	Name: <input type="text" name="name"><br>
+	First Name: <input type="text" name="fname"><br>
+	Last Name: <input type="text" name="lname"><br>
+	Region ID: <input type="text" name="regid"><br>
+	City ID: <input type="text" name="citid"><br>
 	Description: <input type="text" height="20px" name="desc"><br>
-	Event ID: <input type="text" name="pid"><br>
-	Region ID: <input type="text" name="rid"><br>
-	Time periodID: <input type="text" name="time"><br>
 	<input type="submit" value="submit"/>
 </form>
 <br><br><br><br><br>
