--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,15 +1,17 @@
 <h1 class="mt-5">Search</h1>
 <p class="lead">Select your search and refine your search.</p>
 <h5 class="mt-5">Enter your search term</h3>
+<form action="/search" method="post">
 	Search: <input type="text" name="search"><br><br><br>
 
 	Refine your search: <br>
-	<input type="checkbox"> Region     <input type="checkbox"> Event       <input type="checkbox"> Person       <input type="checkbox"> City
+	<input type="checkbox" name="region"> Region     <input type="checkbox" name="event"> Event       <input type="checkbox" name="person"> Person       <input type="checkbox" name="city"> City
 	<br><br><br>
 	ID(Person, event, Region): <input type="text"><br>
 	Name: 					   <input type="text"><br>
 	Time Period: 			   <input type"text"><br>
-	<button type="button">Search!</button>
+	<input type="submit" value="submit"/>
+</form>
 
 	<br>
 	<br>
@@ -19,4 +21,32 @@
 	<br>
 
 	<h4 class="mt-5"> Returned results: </h4>
-	<pre>(table name)		ID		Name		TimePeriod		Description</pre>
+	
+<table>
+	<thead>
+		<tr>
+			<th>Id</th>
+			<th>First Name</th>
+			<th>Last Name</th>
+			<th>Region</th>
+			<th>City</th>
+			<th>Description</th>
+			<th>Remove/Update</th>
+		</tr>
+	</thead>
+	<tbody>
+		{{#each people}}
+			<tr>
+				<td>{{id}}</td>
+				<td>{{first_name}}</td>
+				<td>{{last_name}}</td>
+				<td>{{regid}}</td>
+				<td>{{citid}}</td>
+				<td>{{description}}</td>
+				<td><button type="button" id="removeId1">Remove</button>
+				<button type="button" id="updateId2">Update</button></td>
+			</tr>
+		{{/each}}
+	</tbody>
+
+</table>
