--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -11,6 +11,13 @@
 
   <title>Group 62</title>
 
+
+    {{#each jsscripts}}
+	    <script src="/public/{{this}}"></script>
+	{{/each}}
+
+
+
   <link href="/bootstrap/css/bootstrap.min.css"  rel="stylesheet">
 </head>
 
@@ -49,7 +56,7 @@
     </div>
   </div>
 
-  <script src="/jquery/jquery.slim.min.js"></script>
+  <script src="/jquery/jquery.min.js"></script>
   <script src="/bootstrap/js/bootstrap.bundle.min.js"></script> 
 
 </body>
