updates now work. added all times edit and removal

--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -5,4 +5,5 @@
 	<li><a href="/addEvent">Add Event!</a></li>
 	<li><a href="/addPerson">Add Person!</a></li>
 	<li><a href="/addCity">Add city!</a></li>
+	<li><a href="/addTime">Add Time period!</a></li>
 </ul>
