--- a/views/addPerson.handlebars
+++ b/views/addPerson.handlebars
@@ -43,7 +43,7 @@
 				<td>{{citid}}</td>
 				<td>{{description}}</td>
 				<td><button type="button" onclick="deletePerson({{id}})">Remove</button>
-				<a href="/people/{{id}}">Update</a></td>
+				<a href="/person/{{id}}">Update</a></td>
 			</tr>
 		{{/each}}
 	</tbody>
