added way to associate people and events

--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -6,4 +6,5 @@
 	<li><a href="/addPerson">Add Person!</a></li>
 	<li><a href="/addCity">Add city!</a></li>
 	<li><a href="/addTime">Add Time period!</a></li>
+	<li><a href="/associatePE">Associate a Person and Event</a></li>
 </ul>
