--- a/views/updateCity.handlebars
+++ b/views/updateCity.handlebars
@@ -1,6 +1,6 @@
 
-<h1 class="mt-5">Update person</h1
-<h5 class="mt-5">Update your person</h3>
+<h1 class="mt-5">Update city</h1
+<h5 class="mt-5">Update your city</h3>
 		
 <form action="/city/"
 	method="post">
