--- a/views/addPerson.handlebars
+++ b/views/addPerson.handlebars
@@ -5,11 +5,13 @@
 	First Name: <input type="text" name="fname"><br>
 	Last Name: <input type="text" name="lname"><br>
 	Region: <select name="regid">
+		<option value="NULL">NULL</option>
 		{{#each region}}
 			<option value="{{id}}">{{region_name}}</option>
 		{{/each}}
 	</select><br>
 	City: <select name="citid">
+		<option value="NULL">NULL</option>
 		{{#each city}}
 			<option value="{{id}}">{{city_name}}</option>
 		{{/each}}
